@@ -258,120 +258,6 @@ typedef enum {
 #endif
 #endif
 
-/**
- * Define enums from API v0.53, so applications that were using this version
- * will still be compiled successfully.
- * Note: this list has been extended with new names after version 0.55.
- * This list does not need to be extended for new enums.
- */
-#ifndef NO_COMPAT_IMB_API_053
-/* Previous cipher mode enums */
-#define CBC                     IMB_CIPHER_CBC
-#define CNTR                    IMB_CIPHER_CNTR
-#define NULL_CIPHER             IMB_CIPHER_NULL
-#define DOCSIS_SEC_BPI          IMB_CIPHER_DOCSIS_SEC_BPI
-#define GCM                     IMB_CIPHER_GCM
-#define CUSTOM_CIPHER           IMB_CIPHER_CUSTOM
-#define DES                     IMB_CIPHER_DES
-#define DOCSIS_DES              IMB_CIPHER_DOCSIS_DES
-#define CCM                     IMB_CIPHER_CCM
-#define DES3                    IMB_CIPHER_DES3
-#define PON_AES_CNTR            IMB_CIPHER_PON_AES_CNTR
-#define ECB                     IMB_CIPHER_ECB
-#define CNTR_BITLEN             IMB_CIPHER_CNTR_BITLEN
-
-/* Previous hash algo enums */
-#define SHA1                    IMB_AUTH_HMAC_SHA_1
-#define SHA_224                 IMB_AUTH_HMAC_SHA_224
-#define SHA_256                 IMB_AUTH_HMAC_SHA_256
-#define SHA_384                 IMB_AUTH_HMAC_SHA_384
-#define SHA_512                 IMB_AUTH_HMAC_SHA_512
-#define AES_XCBC                IMB_AUTH_AES_XCBC
-#define MD5                     IMB_AUTH_MD5
-#define NULL_HASH               IMB_AUTH_NULL
-#define AES_GMAC                IMB_AUTH_AES_GMAC
-#define CUSTOM_HASH             IMB_AUTH_CUSTOM
-#define AES_CCM                 IMB_AUTH_AES_CCM
-#define AES_CMAC                IMB_AUTH_AES_CMAC
-#define PLAIN_SHA1              IMB_AUTH_SHA_1
-#define PLAIN_SHA_224           IMB_AUTH_SHA_224
-#define PLAIN_SHA_256           IMB_AUTH_SHA_256
-#define PLAIN_SHA_384           IMB_AUTH_SHA_384
-#define PLAIN_SHA_512           IMB_AUTH_SHA_512
-#define AES_CMAC_BITLEN         IMB_AUTH_AES_CMAC_BITLEN
-#define PON_CRC_BIP             IMB_AUTH_PON_CRC_BIP
-
-/* Previous cipher direction enums */
-#define ENCRYPT                 IMB_DIR_ENCRYPT
-#define DECRYPT                 IMB_DIR_DECRYPT
-
-/* Previous chain order enums */
-#define HASH_CIPHER             IMB_ORDER_HASH_CIPHER
-#define CIPHER_HASH             IMB_ORDER_CIPHER_HASH
-
-/* Previous key size enums */
-#define AES_128_BYTES           IMB_KEY_128_BYTES
-#define AES_192_BYTES           IMB_KEY_192_BYTES
-#define AES_256_BYTES           IMB_KEY_256_BYTES
-#define IMB_KEY_AES_128_BYTES   IMB_KEY_128_BYTES
-#define IMB_KEY_AES_192_BYTES   IMB_KEY_192_BYTES
-#define IMB_KEY_AES_256_BYTES   IMB_KEY_256_BYTES
-#define AES_KEY_SIZE_BYTES      IMB_KEY_SIZE_BYTES
-
-#define MB_MGR                  IMB_MGR
-#define JOB_AES_HMAC            IMB_JOB
-#define JOB_STS                 IMB_STATUS
-#define IMB_JOB_STS             IMB_STATUS
-#define JOB_CIPHER_MODE         IMB_CIPHER_MODE
-#define JOB_CIPHER_DIRECTION    IMB_CIPHER_DIRECTION
-#define JOB_HASH_ALG            IMB_HASH_ALG
-#define JOB_CHAIN_ORDER         IMB_CHAIN_ORDER
-#define MAX_JOBS                IMB_MAX_JOBS
-
-#define STS_BEING_PROCESSED     IMB_STATUS_BEING_PROCESSED
-#define STS_COMPLETED_AES       IMB_STATUS_COMPLETED_CIPHER
-#define STS_COMPLETED_HMAC      IMB_STATUS_COMPLETED_AUTH
-#define STS_COMPLETED           IMB_STATUS_COMPLETED
-#define STS_INVALID_ARGS        IMB_STATUS_INVALID_ARGS
-#define STS_INTERNAL_ERROR      IMB_STATUS_INTERNAL_ERROR
-#define STS_ERROR               IMB_STATUS_ERROR
-
-#define MAX_TAG_LEN             IMB_MAX_TAG_LEN
-#define GCM_IV_DATA_LEN         IMB_GCM_IV_DATA_LEN
-#define GCM_128_KEY_LEN         IMB_GCM_128_KEY_LEN
-#define GCM_192_KEY_LEN         IMB_GCM_192_KEY_LEN
-#define GCM_256_KEY_LEN         IMB_GCM_256_KEY_LEN
-
-#define DES_KEY_SCHED_SIZE      IMB_DES_KEY_SCHED_SIZE
-#define DES_BLOCK_SIZE          IMB_DES_BLOCK_SIZE
-
-#define AES_BLOCK_SIZE          IMB_AES_BLOCK_SIZE
-
-#define SHA1_DIGEST_SIZE_IN_BYTES   IMB_SHA1_DIGEST_SIZE_IN_BYTES
-#define SHA224_DIGEST_SIZE_IN_BYTES IMB_SHA224_DIGEST_SIZE_IN_BYTES
-#define SHA256_DIGEST_SIZE_IN_BYTES IMB_SHA256_DIGEST_SIZE_IN_BYTES
-#define SHA384_DIGEST_SIZE_IN_BYTES IMB_SHA384_DIGEST_SIZE_IN_BYTES
-#define SHA512_DIGEST_SIZE_IN_BYTES IMB_SHA512_DIGEST_SIZE_IN_BYTES
-
-#define SHA1_BLOCK_SIZE    IMB_SHA1_BLOCK_SIZE
-#define SHA_256_BLOCK_SIZE IMB_SHA_256_BLOCK_SIZE
-#define SHA_384_BLOCK_SIZE IMB_SHA_384_BLOCK_SIZE
-#define SHA_512_BLOCK_SIZE IMB_SHA_512_BLOCK_SIZE
-
-#define KASUMI_KEY_SIZE    IMB_KASUMI_KEY_SIZE
-#define KASUMI_IV_SIZE     IMB_KASUMI_IV_SIZE
-#define KASUMI_BLOCK_SIZE  IMB_KASUMI_BLOCK_SIZE
-#define KASUMI_DIGEST_SIZE IMB_KASUMI_DIGEST_SIZE
-
-#define DOCSIS_CRC32_MIN_ETH_PDU_SIZE IMB_DOCSIS_CRC32_MIN_ETH_PDU_SIZE
-#define DOCSIS_CRC32_TAG_SIZE         IMB_DOCSIS_CRC32_TAG_SIZE
-
-/* Previous fields in IMB_JOB/JOB_AES_HMAC */
-#define aes_enc_key_expanded enc_keys
-#define aes_dec_key_expanded dec_keys
-#define aes_key_len_in_bytes key_len_in_bytes
-#endif /* !NO_COMPAT_IMB_API_053 */
-
 typedef enum {
         IMB_CIPHER_CBC = 1,
         IMB_CIPHER_CNTR,
