@@ -63,7 +63,7 @@ DLFLAGS =
 CC = cl
 
 # _CRT_SECURE_NO_WARNINGS disables warning C4996 about insecure strtok() being used
-CFLAGS = /nologo /DNO_COMPAT_IMB_API_053 /D_CRT_SECURE_NO_WARNINGS $(DCFLAGS) /Y- /W3 /WX- /Gm- /fp:precise /EHsc $(EXTRA_CFLAGS) $(INCDIR) /std:c11
+CFLAGS = /nologo /D_CRT_SECURE_NO_WARNINGS $(DCFLAGS) /Y- /W3 /WX- /Gm- /fp:precise /EHsc $(EXTRA_CFLAGS) $(INCDIR) /std:c11
 
 LNK = link
 LFLAGS = /out:$(APP).exe $(DLFLAGS)
