@@ -12,8 +12,9 @@ Library
 - Optimized GHASH component in AVX512 VAES (type2) AES-GCM implementation.
 - Implemented a workaround for false load-block condition in SSE and AVX2 AES-GCM implementations.
 - Removed AVX AES-GCM implementation, its API symbols map to the SSE implementation.
-- QUIC header protection API added
-- QUIC AES-GCM-128/256 AEAD API added
+- QUIC header protection API added.
+- QUIC AES-GCM-128/256 AEAD API added.
+- Removed v0.53 (and older) compatibility symbol mapping (NO_COMPAT_IMB_API_053 not defined).
 
 v1.3 September 2022
 ========================================================================
